2015-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 35056: Test/A02alias.ztst: turn off PROMPT_SP for interactive
	test.

2015-05-08  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35057: Etc/FAQ.yo: make URL clickable (should have been
	included in 34850)

2015-05-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 35054: Src/params.c, Test/B02typeset.ztst: "readonly -p"
	displays unset readonly variables with POSIXBUILTINS.

	* Eric Cook: 35052: Completion/BSD/Command/_bsdconfig,
	Completion/BSD/Command/_bsdinstall,
	Completion/BSD/Command/_jexec, Completion/BSD/Command/_jls:
	new completions.

2015-05-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 35046: Src/lex.c: properly unwind cmdstack when erroring out of
	lexing a parameter expansion in braces

2015-05-06  Peter Stephenson  <p.stephenson@samsung.com>

	* c.f. 35041 (Axel Beckert): Doc/Zsh/zle.yo: typo.

2015-05-06  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35034: improve format in the manual (up to Chapter18)

2015-05-05  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk, Etc/FAQ.yo: update for
	5.0.7-dev-2, including updated FAQ source for newer YODL.

	* 35032: Src/jobs.c: update job status with process status if
	process detected as continued.

2015-05-05  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: fix descriptions in previous commit (cosmetic).

	* 35033: Completion/Zsh/Function/_zcalc: trivial completion.

2015-05-04  Oliver Kiddle  <opk@zsh.org>

	* 35029: Src/Zle/zle_word.c, Test/X02zlevi.ztst:
	improvements to newline handling for vi-mode word movement

2015-05-04  Mikael Magnusson  <mikachu@gmail.com>

	* 35021: Src/builtin.c: Fix two bugs in typeset_setbase

2015-05-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35018 (corrected): NEWS: news.

2015-05-03  Oliver Kiddle  <opk@zsh.org>

	35011: Completion/BSD/Type/_jails, Completion/Solaris/Command/_beadm,